kubernetes/k3s-01/workloads/homeassistant/middlewares-ipallowlist.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeassistant-ipallowlist
  namespace: homeassistant
spec:
  ipAllowList:
    sourceRange:
      - 172.16.0.2
      - 172.16.0.3
      - 192.168.10.3
      - 192.168.10.4
      - 192.168.20.3
      - 192.168.20.4
      - 192.168.20.5
      - 192.168.20.6
      - 192.168.20.8
