kubernetes/k3s-01/workloads/homeassistant/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: docker.io/linuxserver/homeassistant:2026.9.4@sha256:5670b923ae553cb5b337c921e2fa9e08cfb63d7d19e034455b5dea7590cdb2d7
          # startupProbe:
          #   httpGet:
          #     path: /manifest.json
          #     port: 8123
          #   periodSeconds: 30
          #   failureThreshold: 10
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: 100m
              memory: 1024Mi
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: homeassistant
              mountPath: /config
      volumes:
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant
